--- a/about.html
+++ b/about.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="about.css">
-    <link rel="icon" type="image/x-icon" src="Serpent Works white.png">
+    <link rel="icon" type="image/x-icon" sizes="16x16" href="Serpent Works white.png">
+    <link rel="icon" type="image/x-icon" sizes="32x32" href="Serpent Works white.png">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gowshick's Portfolio</title>
@@ -14,29 +15,98 @@
     <!--Header is imported here-->
     <div id="header-container"></div>
 
-    <div class="section">
+    <div class="section" id="section-1">
         <div class="container">
             <div class="about-intro-grid-wrap">
                 <div class="about-intro">
-                    <h2>I&#x27;M Gowshick Raja</h2>
-                    <p> I&#x27;M a web developer and UX-UI designer based in TN, India. I like to build for the web and app to make things pretty and simple.</p>
+                    <label>Hey there</label>
+                    <h2>I&#x27;m Gowshick Raja</h2>
+                    <p class="light-text"> I&#x27;m a web developer and UX-UI designer based in TN, India. I like to build for the web and app to make things pretty and simple.</p>
                 </div>
                 <div class="about-image-container">
+                    <div class="square1"></div>
                     <img src="profileImage2.jpg">
                 </div>
             </div>
         </div>
     </div>
 
-    <div class="section">
+    <div class="section" id="section-2">
         <div class="container">
-            <div class="skills-layout-grid">
-                <div class="skill-summary-wrap">
 
+            <div class="career-layout-grid w-layout-grid">
+                <div class="career-summary-wrap">
+                    <h3>My Career so far</h3>
+                    <p class="light-text"> I have had a keen intrest in designig fromthe start which drived me towards improving my knoledge in the field of design, sharpening my skill in the area of web-development, UI-UX designing and graphic designing </p>
                 </div>
-                <div class="skillset-items">
-                    
+                <div class="career-items w-layout-grid services-items-grid">
+                    <div class="coloum1">
+                        <div class="skill-name-text">Graphic Design</div>
+                        <div class="skill-name-text">UX UI Design</div>
+                        <div class="skill-name-text">Prototyping</div>
+                        <div class="skill-name-text">Web Development</div>
+                    </div>
+                    <div class="coloum2">
+                        <div class="skill-name-text">Coding</div>
+                        <div class="skill-name-text">Figma</div>
+                        <div class="skill-name-text">Adobe</div>
+                    </div>
                 </div>
+            </div>
+        </div>
+    </div>
+    
+    <div class="section" id="section-3">
+        <div class="container">
+            <div class="circle-design"></div>
+            <div class="skills-container-wrap">
+                <div class="skills-container-left">
+                    <h3>Featured Skills</h3>
+                    <p>skills one posses have a great influence and impact on ones life.</p>
+                </div>
+                <div class="skills-container-right">
+
+                    <div class="languages-container">
+                        <h5>Languages</h5>
+                        <p>English</p>
+                        <p>Tamil</p>
+                        <p>Hindi</p>
+                        <p>German</p>
+                    </div>
+                    <div class="education-container">
+                        <h5>Education</h5>
+                        <p>SSLC - Chandrakanthi Public School (2020)</p>
+                        <p>HSC - Sri Chaitanya Techno School (2022)</p>
+                        <p>BE.ECE - Sri Krishna College of Technology (2026)</p>
+                    </div>
+                    <div class="past-container">
+                        <h5>Past</h5>
+                        <p>Class Representative (2022)</p>
+                        <p>Class Committie Member (2023)</p>
+                        <p>Participated in SIH (2023)</p>
+                        <p>Department Event Coordinator Avantaa (2024)</p>
+                        <p>Joint Secretary of Department Students Association (2024)</p>
+                        <p></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="section" id="section-4">
+        <div class="container">
+            <h3>Certificates</h3>
+            <p>Courses - Interships - Trainings </p>
+            <br>
+            <div class="certificate-container-grid">
+                <img src="certificate-1.png" class="certificate" id="image-1">
+                <img src="certificate-2.png" class="certificate" id="image-2">
+                <img src="certificate-3.png" class="certificate" id="image-3">
+                <img src="certificate-4.png" class="certificate" id="image-4">
+                <img src="certificate-5.png" class="certificate" id="image-5">
+                <img src="certificate-6.png" class="certificate" id="image-6">
+                <img src="certificate-7.png" class="certificate" id="image-7">
+                <img src="certificate-8.png" class="certificate" id="image-8">
             </div>
         </div>
     </div>
