--- a/contact-section.html
+++ b/contact-section.html
@@ -2,11 +2,24 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="contact-section.css">
+    <link rel="icon" type="image/x-icon" sizes="16x16" href="Serpent Works white.png">
+    <link rel="icon" type="image/x-icon" sizes="32x32" href="Serpent Works white.png">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <div id="contact-section" class="section contact">
+
+
+
         <div class="contact-container">
+
             <div class="contact-headline">
+                <div class="square-container-wrap">
+                    <div class="square-1-red color-block"></div>
+                    <div class="square-2-blue color-block"></div>
+                    <div class="square-3-green color-block"></div>
+                </div>
                 <h3>Want to get in touch?<br>Drop me a line!</h3>
                 <p class="paragraph-light">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
             </div>
