--- a/header.html
+++ b/header.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="header.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <header data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease" data-easing2="ease" role="banner" class="navigation w-nav">
@@ -11,7 +13,7 @@
             </div>
             <div class="navigation-wrap">
                 <nav role="navigation" class="nav-items">
-                    <a href="home.html" aria-current="page" class="nav-item">Home</a>
+                    <a href="index.html" aria-current="page" class="nav-item">Home</a>
                     <a href="about.html" class="nav-item">About</a>
                     <a href="projects.html" class="nav-item">Projects</a>
                     <a href="" class="nav-item">Contact</a>
