--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/x-icon" src="Serpent Works white.png">
+    <link rel="icon" type="image/x-icon" sizes="16x16" href="Serpent Works white.png">
+    <link rel="icon" type="image/x-icon" sizes="32x32" href="Serpent Works white.png">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gowshick's Portfolio</title>
@@ -17,7 +18,16 @@
 
     <div class="intro-section">
         <div class="container">
+
             <div class="intro-wrap">
+
+                <div class="square-container-wrap">
+                    <div class="square-1-red color-block" id="square-1-red"></div>
+                    <div class="square-2-blue color-block" id="square-2-blue"></div>
+                    <div class="square-3-green color-block" id="square-3-green"></div>
+                </div>
+
+
                 <div class="name-text">Hey, I&#x27;M GOWSHICK RAJA</div>
                 <h1 class="heading-jumbo">An aspiring Design enthusiast, creative UX-UI designer and web developer based in Tamil Nadu, INDIA. </h1>
             </div>
