--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="projects.css">
-    <link rel="icon" type="image/x-icon" src="Serpent Works white.png">
+    <link rel="icon" type="image/x-icon" sizes="16x16" href="Serpent Works white.png">
+    <link rel="icon" type="image/x-icon" sizes="32x32" href="Serpent Works white.png">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gowshick's Portfolio</title>
@@ -14,6 +15,61 @@
     <!--Header is imported here-->
     <div id="header-container"></div>
 
+    <div class="section">
+        <div class="style-heading">
+            <div class="name-text">Explore My Works</div>
+            <p class="light-text">Sem Projects - Portfolio Projects </p>
+        </div>
+
+        <div class="container">
+
+            <div class="project-wrap">
+                <h2>ADMIN's HUB</h2>
+                <p class="light-text">Project Type</p>
+
+                <div class="project-content-container" id="project-content-container">
+                    <div class="project-desc-wrap">
+                        <div class="project-overview-container">
+                            <h4>Project Overview</h4>
+                            <p class="light-text">Admin'sHUB is a comprehensive HR/Employer Dashboard App designed to streamline and enhance the efficiency of human resource management within a company. The app provides HR professionals with a powerful platform to oversee and manage various aspects of their company's operations.</p>
+                        </div>
+                        <div class="project-contibution-container">
+                            <h4>My Contribution</h4>
+                            <p class="light-text">In the development of Admin'sHUB, I was responsible for the following contributions: </p>
+                            <h6>UI/UX Design:</h6>
+                            <p class="light-text">Led the design process using Figma, creating a user-friendly and visually appealing interface for the entire app.</p>
+                            <h6>Feature Development:</h6>
+                            <p class="light-text">Designed key features such as the Dashboard, Message Center, Task Keeper, and File Manager, ensuring they meet the needs of HR professionals.</p>
+                            <h6>Navigation Enhancement:</h6>
+                            <p class="light-text">Implemented side menu bars to improve the app's navigation and user experience.</p>
+                            <h6>Page Creation:</h6>
+                            <p class="light-text">Developed the landing page, login and signup pages, and the calendar feature.</p>
+                            <h6>Dark Mode Layout:</h6>
+                            <p class="light-text">Created a complete dark mode layout to offer users a modern and eye-friendly alternative.</p>
+                            <h6>Detail Refinement:</h6>
+                            <p class="light-text">Made numerous small adjustments and enhancements across the design to ensure consistency and usability.</p>
+                        </div> 
+                    </div>
+
+                    <div class="project-media-container">
+                        <img src="adminsHub image1.png" class="project-image" id="project1-image1">
+                        <img src="adminsHub image2.png" class="project-image" id="project1-image2">
+                        <img src="adminsHub image3.png" class="project-image" id="project1-image3">
+                        <video src="ADMIN'SHUB video.mp4" class="project-video" id="project1-video1" controls preload="metadata"></video>
+                    </div>
+                </div>
+
+                <div class="action-button">
+                    <button class="type-1-button"> View Project </button>
+                    <button onclick="seeMoreBtn()"  class="type-2-button">
+                        <img src="next-button.svg" alt="See More">
+                    </button>                
+                </div>
+            </div>
+
+
+        </div>
+    </div>
 
 
     <!--Footer and Contact section is imported here-->
