--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="common.css">
     <link rel="icon" type="image/x-icon" sizes="16x16" href="Serpent Works white.png">
     <link rel="icon" type="image/x-icon" sizes="32x32" href="Serpent Works white.png">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
@@ -16,7 +17,13 @@
     <div id="header-container"></div>
 
 
+
     <div class="intro-section">
+
+        <div class="background-image">
+            <img src="Brand of the sacrifice_.jpeg" />
+        </div>
+        
         <div class="container">
 
             <div class="intro-wrap">
@@ -31,6 +38,7 @@
                 <div class="name-text">Hey, I&#x27;M GOWSHICK RAJA</div>
                 <h1 class="heading-jumbo">An aspiring Design enthusiast, creative UX-UI designer and web developer based in Tamil Nadu, INDIA. </h1>
             </div>
+
         </div>
     </div>
 
